
INCLUDES = -I$(top_srcdir)/src/klfbackend $(all_includes)
METASOURCES = AUTO

if KLF_ENABLE_GUI
  picsdir = $(kde_datadir)/klatexformula/pics
  pics_DATA = clear.png evaluate.png switchexpanded.png switchshrinked.png \
	history.png closehide.png delete.png restoreall.png restore.png loadstyle.png \
	savestyle.png managestyles.png settings.png ok.png actions.png symbols.png \
	clearright.png insertsymb.png badsym.png resetdefaults.png help.png
endif
