
INCLUDES = -I$(top_srcdir)/src/klfbackend $(all_includes)
METASOURCES = AUTO

if KLF_ENABLE_GUI
  picsdir = $(kde_datadir)/klatexformula/pics
  pics_DATA = actions.png badsym.png clear.png clearright.png closehide.png \
	delete.png evaluate.png findnext.png help.png history.png insertsymb.png \
	loadstyle.png managestyles.png ok.png resetdefaults.png restore.png restoreall.png \
	savestyle.png settings.png switchexpanded.png switchshrinked.png symbols.png
endif
